# infinigram-api

./: .dockerignore  README.md  docker-compose.yaml  hello.py  pyproject.toml  skiff.json  skiff2.json  test.yaml
.github/workflows/: check.yml  deploy-api.yml  deploy.yml
.skiff/: cloudbuild-deploy.yaml  webapp.jsonnet  worker.libjsonnet
api/: .env  Dockerfile  app.py  pyproject.toml  requirements.txt  uv.Dockerfile
api/infra/k8s/: infini-gram-worker-olmo-2-32b.yaml  infini-gram-worker-olmo-3-32b-instruct.yaml
api/infra/k8s/volume-claims/: v6-dolma2-0625-v02-32b.yaml
api/requirements/: ci-requirements.txt  common-requirements.txt  dev-requirements.txt
api/src/: config.py  glog.py  service_name_span_processor.py
api/src/attribution/: attribution_queue_service.py  attribution_request.py  attribution_router.py  attribution_service.py
api/src/attribution/test/: test_span_density.py
api/src/cache/: __init__.py
api/src/documents/: documents_router.py  documents_service.py
api/src/infinigram/: index_mappings.py  infini_gram_dependency.py  infinigram_router.py  prev_infinigram_server.py  processor.py
api/src/infinigram/tokenizers/: tokenizer.py
api/src/performance_profiling/: profile_request.py
attribution-worker/: Dockerfile  get_documents.py  prod-requirements.txt  pyproject.toml  requirements.txt
attribution-worker/src/: config.py  get_documents.py  worker.py
attribution_worker/: Dockerfile  __init__.py  attribution_handler.py  attribution_worker_context.py  config.py  get_documents.py  otel_setup.py  pyproject.toml  worker.py
compute_stats/: batch.py  batch.sh
docs/: CONTRIBUTING.md  indexes.md
indexing/: indexing_dolmino.sh  raw_s3_to_weka_all.sh  transform_hf_to_raw_dolci.py
indexing/dolma2/: README.md  aws_launch.sh  aws_workflow_template.sh  aws_workflow_template_dolci.sh  create_aws_workflows.py  dolma2-0625-v01-missing-pdfs.csv  dolma2-0625-v01.csv  dolma2-0625-v02.csv  dolma3-dolmino-official-100b.csv  environment.yml  extract_meta.py  indexing_v6.py  make_raw_s5cmd_file.py  make_s5cmd_files.py  verify_csv.py
indexing/dolma2/aws_workflows/: rank_0000.sh  rank_0001.sh  rank_0002.sh  rank_0003.sh  rank_0004.sh  rank_0005.sh  rank_0006.sh  rank_0007.sh  rank_0008.sh  rank_0009.sh  rank_0010.sh  rank_0011.sh  rank_0012.sh  rank_0013.sh  rank_0014.sh  rank_0015.sh  rank_0016.sh  rank_0017.sh  rank_0018.sh  rank_0019.sh  rank_0020.sh  rank_0021.sh  rank_0022.sh  rank_0023.sh  rank_0024.sh
indexing/dolma2/depricated/: log.test  raw.s5cmd.test
indexing/dolma2/s5cmd_files/: shard_00.s5cmd  shard_01.s5cmd  shard_02.s5cmd  shard_03.s5cmd  shard_04.s5cmd  shard_05.s5cmd  shard_06.s5cmd  shard_07.s5cmd  shard_08.s5cmd  shard_09.s5cmd  shard_10.s5cmd  shard_11.s5cmd  shard_12.s5cmd  shard_13.s5cmd  shard_14.s5cmd  shard_15.s5cmd  shard_16.s5cmd  shard_17.s5cmd  shard_18.s5cmd  shard_19.s5cmd  shard_20.s5cmd  shard_21.s5cmd  shard_22.s5cmd  shard_23.s5cmd  shard_24.s5cmd
indexing/dolma2/s5cmd_files_v01/: shard_06.s5cmd  shard_07.s5cmd  shard_08.s5cmd  shard_09.s5cmd  shard_10.s5cmd  shard_11.s5cmd  shard_12.s5cmd  shard_14.s5cmd  shard_16.s5cmd  shard_19.s5cmd  shard_20.s5cmd
indexing/dolma2/s5cmd_files_v01_missing_pdfs/: shard_00.s5cmd
indexing/dolma2/s5cmd_files_v02/: shard_00.s5cmd  shard_01.s5cmd  shard_02.s5cmd  shard_03.s5cmd  shard_04.s5cmd  shard_05.s5cmd  shard_06.s5cmd  shard_07.s5cmd  shard_08.s5cmd  shard_09.s5cmd  shard_10.s5cmd  shard_11.s5cmd  shard_12.s5cmd  shard_13.s5cmd  shard_14.s5cmd  shard_15.s5cmd  shard_16.s5cmd  shard_17.s5cmd  shard_18.s5cmd  shard_19.s5cmd  shard_20.s5cmd  shard_21.s5cmd  shard_22.s5cmd  shard_23.s5cmd  shard_24.s5cmd
infini-gram-processor/: pyproject.toml
infini-gram-processor/src/infini_gram_processor/: infinigram_router.py  processor.py
infra/k8s/: README.md  kustomization.yaml
infra/k8s/volume-claims/: dolma2-0625-base-shared.yaml  olmoe-mix-0924-dclm.yaml  olmoe-mix-0924-nodclm.yaml  v4-olmo-2-0325-32b-anneal-adapt.yaml
infra/k8s/volumes/: infinigram-storage-class.yaml  kustomization.yaml  (+3 more)
load-test/: README.md  locustfile-async.py  locustfile-short.py  locustfile.py
otel-collector/: Dockerfile  otel-collector-config.yaml
proxy/: local.conf
scripts/: benchmark_latency.py  compute_stats.py  dump_dolma2_bow_ids.py  eval_corpuslink_relevance.py  generate_dolma3_csv.py  generate_s2pdf_csv.py  issue_request.py  move-dolma2-shards.sh  request_doc.py  split-dolma2-v01-shard.sh  stress_test_api.py  test_infini_gram_api.py  trace_bailey100.py
volume-claims/: dolci-instruct-sft-7b.yaml  dolci-think-sft-32b.yaml  dolci-think-sft-7b.yaml  dolma2-0625-base-shared.yaml  dolma2-0625-v01-7b.yaml  olmoe-adapt.yaml  olmoe-mix-0924-writer-job.yaml  v4-olmo-2-1124-13b-anneal-adapt.yaml  v4-olmoe-0125-1b-7b-anneal-adapt.yaml  v4-tulu-v3-1-mix.yaml  v4-ultrafeedback.yaml  v6-dolma2-0625-v02-32b.yaml  volume-checker-pod.yaml  volume-claim.yaml.template  writer-pod.yaml  writer-pod.yaml.template
(+118 files in other folders)
