[project]
name = "root"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = []

[tool.uv.workspace]
members = ["api", "attribution-worker"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[tool.pyright]
pythonVersion = "3.12"

[tool.ruff]
exclude = [
    ".venv",
    ".vscode",
    ".github",
    "venv",
    "vendor"
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]

files = [
    '.'
]

exclude = [
    'vendor',
    'indexing',
    'compute_stats',
    'scripts',
]

strict = true

[[tool.mypy.overrides]]
module = [
    "src.glog"
]
disable_error_code = ['type-arg', 'no-untyped-def', 'no-untyped-call']
