[project]
name = "infini-gram-api"
version = "0.1.0"
requires-python = "~=3.12"
dependencies = [
    "fastapi==0.111.0",
    "infini-gram",
    "numpy<2.0.0",
    "opentelemetry-api==1.30.0",
    "opentelemetry-exporter-gcp-trace==1.9.0",
    "opentelemetry-exporter-otlp-proto-http==1.30.0",
    "opentelemetry-instrumentation-fastapi==0.51b0",
    "opentelemetry-sdk==1.30.0",
    "pydantic-settings==2.3.4",
    "python-json-logger==2.0.7",
    "requests==2.32.3",
    "saq[postgres]>=0.22.4",
    "transformers==4.41.2",
    "types-requests==2.32.0.20240914",
    "psycopg[binary,pool]>=3.2.6",
]

[tool.uv.sources]
infini-gram = [
    { path = "../vendor/infini_gram-2.4.0-cp312-cp312-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin'" },
    { path = "../vendor/infini_gram-2.4.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl", marker = "sys_platform == 'linux'" }
]

