[project]
name = "infini-gram-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "infini-gram",
    "numpy<2.0.0",
    "opentelemetry-api==1.38.0",
    "opentelemetry-exporter-gcp-trace==1.11.0",
    "opentelemetry-exporter-otlp-proto-http==1.38.0",
    "opentelemetry-instrumentation-fastapi==0.59b0",
    "opentelemetry-sdk==1.38.0",
    "pydantic-settings==2.3.4",
    "python-json-logger==4.0.0",
    "requests==2.32.3",
    "saq[postgres]>=0.22.4",
    "transformers==4.57.1",
    "types-requests==2.32.0.20240914",
    "psycopg[binary,pool]>=3.2.6",
    "fastapi_problem==0.10.7",
    "redis[hiredis]==5.2.1",
    "infini-gram-processor",
    "opentelemetry-instrumentation-logging==0.59b0",
]
