[project]
name = "infini-gram-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "infini-gram",
    "numpy<2.0.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "pydantic-settings==2.3.4",
    "python-json-logger==4.0.0",
    "requests==2.32.3",
    "saq[redis]>=0.26.3",
    "transformers==4.57.1",
    "types-requests==2.32.0.20240914",
    "fastapi_problem==0.10.7",
    "redis[hiredis]==5.2.1",
    "infini-gram-processor",
    "infinigram-api-shared",
    "opentelemetry-instrumentation-logging==0.62b1",
]
