[project]
name = "infini-gram-attribution-worker"
version = "0.1.0"
requires-python = "~=3.12"
dependencies = [
    "pydantic-settings==2.3.4",
    "pydantic==2.10.6",
    "saq[postgres]==0.22.4",
    "transformers==4.41.2",
]

[tool.uv.sources]
infini-gram = [
    { path = "../vendor/infini_gram-2.4.0-cp312-cp312-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin'" },
    { path = "../vendor/infini_gram-2.4.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl", marker = "sys_platform == 'linux'" }
]