[project]
name = "infini-gram-attribution-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings==2.3.4",
    "pydantic==2.10.6",
    "saq[redis,web]>=0.26.3",
    "transformers==4.57.1",
    "infini-gram-processor",
    "infinigram-api-shared",
    "numpy<2.0.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
]
